# FroyVisuals-old

./: .gitignore  AndroidManifest.xml  Makefile  NOTES  README  README.md  StarVisuals.apk  am.txt  build.xml  debug.sh  fetch.sh  gprof.sh  index.html  redirect_stdout_stderr.sh  stack.py  val.sh  valgrind.txt
StarVisuals/: AndroidManifest.xml  Makefile  README.md  build.xml  debug_mem.txt  stlport.txt
StarVisuals/include/: algorithm  assert.h  atomic  bitset  callstack.h  cassert  cctype  cerrno  cfloat  chrono  ciso646  climits  clocale  cmath  complex  condition_variable  csetjmp  csignal  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  ctime  ctype.h  cwchar  cwctype  deque  errno.h  exception  exception.h  float.h  forward_list  fstream  functional  iomanip  ios  iosfwd  iostream  (+65 more)
StarVisuals/jni/: Android.mk  Application.mk  actor_blursk  actor_bumpscope  actor_corona  actor_finespectrum  actor_infinite  actor_jakdaw  actor_jess  libvisual  (+3 more)
StarVisuals/jni/lua-icxx/trunk/test/: CMakeLists.txt  lua_icxx sample 1.vcproj  main.cpp  sample1.lua  test_bad_syntax.lua
StarVisuals/jni/lua-icxx/trunk/test/.svn/: all-wcprops  entries
StarVisuals/jni/lua-icxx/trunk/test/.svn/text-base/: SimpleLuaApiExample.cpp.svn-base  lua_iccxx_test.vcproj.svn-base  testLuaxx.cpp.svn-base  test_bad_logic.lua.svn-base
include/: cpufeatures  libvisual  lua  lvconfig.h
java/: AndroidManifest.xml  Makefile  build.sh  build.xml  clean.sh  local.properties
jni/: Android.mk  Application.mk  froyvisuals.c  gettext.h  plasma.c
lua-5.1-x86/: .INSTALL.swp
tools/: debug.sh  pull.sh
(+1417 files in other folders)
